[package]
name = "ringvec"
version = "0.1.0"
description = "A simple ring buffer implementation based on a vector"
homepage = "https://github.com/stjepangolemac/ringvec"
repository = "https://github.com/stjepangolemac/ringvec"
documentation = "https://docs.rs/ringvec"
readme = "README.md"
license-file = "LICENSE"
keywords = ["ring", "buffer", "vec"]
categories = ["data-structures"]
edition = "2018"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "my_benchmark"
harness = false
